--- a/ARindex.html
+++ b/ARindex.html
@@ -13,6 +13,7 @@
   <a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
 <a-torus-knot color="orange" radius="1.2" position="-3 1 -5" animation="property:rotation; to: 0 0 360; loop:true; dur:10000"></a-torus-knot>
   <a-text value="Welcome to browser’s VR!" color="black" width="10" position="-0.5 1 -6"></a-text>
+  <a-sky color="grey"></a-sky>
 </a-scene>
 <body>
 </html>
