--- a/week6/index.html
+++ b/week6/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<голова>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
@@ -8,7 +8,7 @@
     <script src="weekday6_code.js"></script>
     <title>Домашнє завдання №6</title>
 </head>
-<тіло>
+<body>
 		<a-scene arjs embedded vr-mode-ui="enabled: false;">
 			<a-marker type="pattern" url="pattern-letterA.patt" registerevents id="A">
 				<a-sphere radius="0.1" color="red">
